[gd_scene load_steps=2 format=2]

[ext_resource path="res://components/CameraEffects/ScreenShake/ScreenShake.gd" type="Script" id=1]

[node name="ScreenShake" type="Node2D"]
script = ExtResource( 1 )

[node name="ShakeTween" type="Tween" parent="."]

[node name="ShakeTimer" type="Timer" parent="."]

[node name="EndShakeTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ShakeTimer" to="." method="_on_ShakeTimer_timeout"]
[connection signal="timeout" from="EndShakeTimer" to="." method="_on_EndShakeTimer_timeout"]
